主题配置修改

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 title: 小女孩
 subtitle: '小女孩的故事'
 description: '记录小女孩的故事'
-keywords:
+keywords: 小女孩的故事
 author: 小女孩
-language: en
+language: zh-CN
 timezone: ''
 
 # URL
