--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "hexo-site",
   "version": "1.0.0",
   "private": true,
+  "packageManager": "pnpm@9.0.0",
+  "engines": {
+    "node": ">=18.0.0",
+    "pnpm": ">=8.0.0"
+  },
   "scripts": {
     "build": "hexo generate",
     "clean": "hexo clean",
